fix: 🚑️ no scroll on mobile when on page change

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
 
   color: rgba(0, 0, 0, 0.87);
   background-color: #f4f8f8;
+  overflow: auto;
 }
 
 div#__next {
